--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 	"id": "com.athom.philipsair",
-	"version": "0.0.30",
+	"version": "0.0.31",
 	"compatibility": ">=1.5.0",
 	"sdk": 2,
 	"brandColor": "#002aff",
@@ -36,12 +36,12 @@
 	},
 	"contributors": {
 		"developers": [
-		  {
-			"name": "Radoslav Gerganov, https://github.com/rgerganov/py-air-control"
-		  }
+			{
+				"name": "Radoslav Gerganov, https://github.com/rgerganov/py-air-control"
+			}
 		]
 	},
-	"homeyCommunityTopicId": 32151,	
+	"homeyCommunityTopicId": 32151,
 	"capabilities": {
 		"latest_retrieval_date": {
 			"type": "string",
@@ -127,7 +127,7 @@
 			"decimals": 0,
 			"insights": true,
 			"uiComponent": "sensor",
-			"icon": "/assets/images/flower.svg"			
+			"icon": "/assets/images/flower.svg"
 		},
 		"measure_tvoc": {
 			"type": "number",
@@ -236,7 +236,7 @@
 			},
 			"getable": true,
 			"setable": false,
-			"icon": "/assets/images/water-tank.svg"	
+			"icon": "/assets/images/water-tank.svg"
 		},
 		"onoff": {
 			"type": "boolean",
@@ -433,7 +433,7 @@
 					"title": {
 						"en": "Humidity"
 					}
-				}				
+				}
 			]
 		},
 		"timer_remaining": {
@@ -540,7 +540,7 @@
 					"title": {
 						"en": "12"
 					}
-				}		
+				}
 			],
 			"insights": true,
 			"icon": "/assets/images/clock.svg"
@@ -580,7 +580,7 @@
 				},
 				"titleFormatted": {
 					"en": "Replace or clean filter [[which]]"
-				},				
+				},
 				"tokens": [
 					{
 						"name": "hours",
@@ -601,7 +601,7 @@
 						"example": {
 							"en": "carbon"
 						}
-					},					
+					},
 					{
 						"name": "device",
 						"type": "string",
@@ -611,7 +611,7 @@
 						"example": {
 							"en": "air_v4wok"
 						}
-					}					
+					}
 				],
 				"args": [
 					{
@@ -623,26 +623,26 @@
 						"name": "which",
 						"type": "dropdown",
 						"values": [
-						  {
-							"id": "pre_filter",
-							"label": {
-							  "en": "pre filter"
+							{
+								"id": "pre_filter",
+								"label": {
+									"en": "pre filter"
+								}
+							},
+							{
+								"id": "carbon_filter",
+								"label": {
+									"en": "carbon filter"
+								}
+							},
+							{
+								"id": "hepa_filter",
+								"label": {
+									"en": "hepa filter"
+								}
 							}
-						  },
-						  {
-							"id": "carbon_filter",
-							"label": {
-							  "en": "carbon filter"
-							}
-						  },
-						  {
-							"id": "hepa_filter",
-							"label": {
-							  "en": "hepa filter"
-							}
-						  }
 						]
-					}						
+					}
 				]
 			},
 			{
@@ -729,7 +729,7 @@
 				},
 				"titleFormatted": {
 					"en": "Allergen level [[argument_main]]"
-				},				
+				},
 				"hint": {
 					"en": "Allergen level"
 				},
@@ -773,7 +773,7 @@
 				},
 				"titleFormatted": {
 					"en": "pm2.5 level [[argument_main]]"
-				},	
+				},
 				"hint": {
 					"en": "pm2.5 measurement"
 				},
@@ -813,22 +813,9 @@
 		],
 		"actions": [
 			{
-			  "id": "on",
-			  "title": {
-				"en": "Startup purifier"
-			  },
-			  "args": [
-				{
-					"name": "device",
-					"type": "device",
-					"filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
-				}
-			  ]
-			},
-			{
-				"id": "off",
+				"id": "on",
 				"title": {
-				  "en": "Shutoff purifier"
+					"en": "Startup purifier"
 				},
 				"args": [
 					{
@@ -836,175 +823,188 @@
 						"type": "device",
 						"filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
 					}
-				  ]
+				]
+			},
+			{
+				"id": "off",
+				"title": {
+					"en": "Shutoff purifier"
+				},
+				"args": [
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
+					}
+				]
 			},
 			{
 				"id": "light_intensity",
 				"title": {
-				  "en": "Light level ring"
+					"en": "Light level ring"
 				},
 				"titleFormatted": {
 					"en": "Light level ring [[mode]]"
-				},	
+				},
 				"args": [
-				  {
-					  "name": "device",
-					  "type": "device",
-					  "filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
-				  },
-				  {
-					"name": "mode",
-					"type": "dropdown",
-					"values": [
-						{
-							"id": "0",
-							"title": {
-								"en": "0"
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
+					},
+					{
+						"name": "mode",
+						"type": "dropdown",
+						"values": [
+							{
+								"id": "0",
+								"title": {
+									"en": "0"
+								}
+							},
+							{
+								"id": "25",
+								"title": {
+									"en": "25"
+								}
+							},
+							{
+								"id": "50",
+								"title": {
+									"en": "50"
+								}
+							},
+							{
+								"id": "75",
+								"title": {
+									"en": "75"
+								}
+							},
+							{
+								"id": "100",
+								"title": {
+									"en": "100"
+								}
 							}
-						},
-						{
-							"id": "25",
-							"title": {
-								"en": "25"
-							}
-						},
-						{
-							"id": "50",
-							"title": {
-								"en": "50"
-							}
-						},
-						{
-							"id": "75",
-							"title": {
-								"en": "75"
-							}
-						},
-						{
-							"id": "100",
-							"title": {
-								"en": "100"
-							}
-						}						
-					]	
-				  }
+						]
+					}
 				]
-			},					
+			},
 			{
 				"id": "fan_speed",
 				"title": {
-				  "en": "Fan speed"
+					"en": "Fan speed"
 				},
 				"titleFormatted": {
 					"en": "Fan [[mode]]"
-				},	
+				},
 				"args": [
-				  {
-					  "name": "device",
-					  "type": "device",
-					  "filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
-				  },
-				  {
-					"name": "mode",
-					"type": "dropdown",
-					"values": [
-						{
-							"id": "1",
-							"title": {
-								"en": "Speed 1"
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
+					},
+					{
+						"name": "mode",
+						"type": "dropdown",
+						"values": [
+							{
+								"id": "1",
+								"title": {
+									"en": "Speed 1"
+								}
+							},
+							{
+								"id": "2",
+								"title": {
+									"en": "Speed 2"
+								}
+							},
+							{
+								"id": "3",
+								"title": {
+									"en": "Speed 3"
+								}
+							},
+							{
+								"id": "AUTO",
+								"title": {
+									"en": "Auto"
+								}
+							},
+							{
+								"id": "s",
+								"title": {
+									"en": "Silent"
+								}
+							},
+							{
+								"id": "t",
+								"title": {
+									"en": "Turbo"
+								}
 							}
-						},
-						{
-							"id": "2",
-							"title": {
-								"en": "Speed 2"
-							}
-						},
-						{
-							"id": "3",
-							"title": {
-								"en": "Speed 3"
-							}
-						},
-						{
-							"id": "AUTO",
-							"title": {
-								"en": "Auto"
-							}
-						},
-						{
-							"id": "s",
-							"title": {
-								"en": "Silent"
-							}
-						},
-						{
-							"id": "t",
-							"title": {
-								"en": "Turbo"
-							}
-						}						
-					]	
-				  }
+						]
+					}
 				]
-			},		  	
+			},
 			{
 				"id": "purifier_mode",
 				"title": {
-				  "en": "purifier mode"
+					"en": "purifier mode"
 				},
 				"titleFormatted": {
 					"en": "purifier [[mode]]"
 				},
 				"args": [
-				  {
-					  "name": "device",
-					  "type": "device",
-					  "filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
-				  },
-				  {
-					"name": "mode",
-					"type": "dropdown",
-					"values": [
-						{
-							"id": "P",
-							"title": {
-								"en": "General mode"
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
+					},
+					{
+						"name": "mode",
+						"type": "dropdown",
+						"values": [
+							{
+								"id": "P",
+								"title": {
+									"en": "General mode"
+								}
+							},
+							{
+								"id": "A",
+								"title": {
+									"en": "Allergen mode"
+								}
+							},
+							{
+								"id": "M",
+								"title": {
+									"en": "Manual mode"
+								}
+							},
+							{
+								"id": "B",
+								"title": {
+									"en": "Bacteria & Virus mode"
+								}
 							}
-						},
-						{
-							"id": "A",
-							"title": {
-								"en": "Allergen mode"
-							}
-						},
-						{
-							"id": "M",
-							"title": {
-								"en": "Manual mode"
-							}
-						},
-						{
-							"id": "B",
-							"title": {
-								"en": "Bacteria & Virus mode"
-							}
-						}
-					]
-				}										  
-			  ]
+						]
+					}
+				]
 			},
 			{
 				"id": "func_mode_on",
 				"title": {
-				  "en": "Enable Humidification"
+					"en": "Enable Humidification"
 				},
 				"args": [
-				  {
-					  "name": "device",
-					  "type": "device",
-					  "filter": "driver_id=device2|deviceCoap2"
-				  }
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=device2|deviceCoap2"
+					}
 				]
 			},
 			{
@@ -1013,11 +1013,11 @@
 					"en": "Disable Humidification"
 				},
 				"args": [
-					  {
-						  "name": "device",
-						  "type": "device",
-						  "filter": "driver_id=device2|deviceCoap2"
-					  }
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=device2|deviceCoap2"
+					}
 				]
 			}
 		]
@@ -1057,7 +1057,8 @@
 			"class": "other",
 			"energy": {
 				"approximation": {
-					"usageConstant": 20
+					"usageOn": 19,
+					"usageOff": 1
 				}
 			},
 			"capabilities": [
@@ -1118,7 +1119,8 @@
 			"class": "other",
 			"energy": {
 				"approximation": {
-					"usageConstant": 20
+					"usageOn": 19,
+					"usageOff": 1
 				}
 			},
 			"capabilities": [
@@ -1184,7 +1186,8 @@
 			"class": "other",
 			"energy": {
 				"approximation": {
-					"usageConstant": 20
+					"usageOn": 19,
+					"usageOff": 1
 				}
 			},
 			"capabilities": [
@@ -1245,7 +1248,8 @@
 			"class": "other",
 			"energy": {
 				"approximation": {
-					"usageConstant": 20
+					"usageOn": 19,
+					"usageOff": 1
 				}
 			},
 			"capabilities": [
