--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -938,6 +938,12 @@
           "id": "2",
           "title": {
             "en": "GAS, some devices"
+          }
+        },
+        {
+          "id": "3",
+          "title": {
+            "en": "Humidity"
           }
         }
       ]
