--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -1214,6 +1214,12 @@
           "id": "P",
           "title": {
             "en": "General / Auto mode"
+          }
+        },
+        {
+          "id": "AS",
+          "title": {
+            "en": "Allergy Sleep, some devices"
           }
         },
         {
