--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -737,7 +737,8 @@
         "child_lock",
         "fan_speed",
         "timer_remaining",
-        "timer"
+        "timer",
+        "error"
       ],
       "platforms": [
         "local"
@@ -811,7 +812,8 @@
         "func_mode",
         "water_level",
         "timer_remaining",
-        "timer"
+        "timer",
+        "error"
       ],
       "platforms": [
         "local"
@@ -983,6 +985,14 @@
           }
         }
       ]
+    },
+    "error": {
+      "type": "string",
+      "title": {
+        "en": "error"
+      },
+      "getable": true,
+      "setable": false
     },
     "fan_speed": {
       "type": "enum",
