--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -982,6 +982,12 @@
           "id": "3",
           "title": {
             "en": "Humidity"
+          }
+        },
+        {
+          "id": "6",
+          "title": {
+            "en": "Moisture"
           }
         }
       ]
