--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.24",
+  "version": "1.0.25",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -987,7 +987,7 @@
         {
           "id": "6",
           "title": {
-            "en": "Moisture"
+            "en": "Humidity, some devices"
           }
         }
       ]
