--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.27",
+  "version": "1.0.32",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -375,13 +375,19 @@
               {
                 "id": "s",
                 "title": {
-                  "en": "Silent, some devices"
+                  "en": "Silent,sleep"
                 }
               },
               {
                 "id": "t",
                 "title": {
                   "en": "Turbo, some devices"
+                }
+              },
+              {
+                "id": "as",
+                "title": {
+                  "en": "Sleep allergy"
                 }
               }
             ]
@@ -1043,7 +1049,7 @@
         {
           "id": "s",
           "title": {
-            "en": "Silent, some devices"
+            "en": "Silent/Sleep, some devices"
           }
         },
         {
@@ -1055,7 +1061,7 @@
         {
           "id": "as",
           "title": {
-            "en": "Unknow"
+            "en": "Sleep allergy"
           }
         }
       ]
