--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.32",
+  "version": "1.0.40",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -333,6 +333,23 @@
     "actions": [
       {
         "title": {
+          "en": "Child lock"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
+          },
+          {
+            "name": "mode",
+            "type": "checkbox"
+          }
+        ],
+        "id": "child_lock"
+      },
+      {
+        "title": {
           "en": "Fan speed"
         },
         "titleFormatted": {
@@ -364,6 +381,48 @@
                 "id": "3",
                 "title": {
                   "en": "Speed 3, some devices"
+                }
+              },
+              {
+                "id": "4",
+                "title": {
+                  "en": "Speed 4, some devices"
+                }
+              },
+              {
+                "id": "5",
+                "title": {
+                  "en": "Speed 5, some devices"
+                }
+              },
+              {
+                "id": "6",
+                "title": {
+                  "en": "Speed 6, some devices"
+                }
+              },
+              {
+                "id": "7",
+                "title": {
+                  "en": "Speed 7, some devices"
+                }
+              },
+              {
+                "id": "8",
+                "title": {
+                  "en": "Speed 8, some devices"
+                }
+              },
+              {
+                "id": "9",
+                "title": {
+                  "en": "Speed 9, some devices"
+                }
+              },
+              {
+                "id": "10",
+                "title": {
+                  "en": "Speed 10, some devices"
                 }
               },
               {
@@ -778,6 +837,14 @@
               "value": "",
               "hint": {
                 "en": "Enter the IP address key of your Philips Air purifier"
+              }
+            },
+            {
+              "id": "add_delay",
+              "type": "checkbox",
+              "value": false,
+              "label": {
+                "en": "Add 60 seconds delay"
               }
             }
           ]
