--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.45",
+  "version": "1.0.46",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -1129,6 +1129,48 @@
           "id": "as",
           "title": {
             "en": "Sleep allergy"
+          }
+        },
+        {
+          "id": "4",
+          "title": {
+            "en": "Speed 4, some devices"
+          }
+        },
+        {
+          "id": "5",
+          "title": {
+            "en": "Speed 5, some devices"
+          }
+        },
+        {
+          "id": "6",
+          "title": {
+            "en": "Speed 6, some devices"
+          }
+        },
+        {
+          "id": "7",
+          "title": {
+            "en": "Speed 7, some devices"
+          }
+        },
+        {
+          "id": "8",
+          "title": {
+            "en": "Speed 8, some devices"
+          }
+        },
+        {
+          "id": "9",
+          "title": {
+            "en": "Speed 9, some devices"
+          }
+        },
+        {
+          "id": "10",
+          "title": {
+            "en": "Speed 9, some devices"
           }
         }
       ]
