--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.46",
+  "version": "1.0.47",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -1400,6 +1400,12 @@
           "title": {
             "en": "Bacteria & Virus mode"
           }
+        },
+        {
+          "id": "F",
+          "title": {
+            "en": "F, some devices"
+          }
         }
       ]
     },
@@ -1420,15 +1426,33 @@
           }
         },
         {
+          "id": "45",
+          "title": {
+            "en": "45%"
+          }
+        },
+        {
           "id": "50",
           "title": {
             "en": "50%"
           }
         },
         {
+          "id": "55",
+          "title": {
+            "en": "55%"
+          }
+        },
+        {
           "id": "60",
           "title": {
             "en": "60%"
+          }
+        },
+        {
+          "id": "65",
+          "title": {
+            "en": "65%"
           }
         },
         {
