--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.50",
+  "version": "1.0.51",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -803,7 +803,9 @@
         "fan_speed",
         "timer_remaining",
         "timer",
-        "error"
+        "error",
+        "measure_humidity",
+        "measure_temperature"
       ],
       "platforms": [
         "local"
