--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.51",
+  "version": "1.0.52",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -934,9 +934,88 @@
         }
       },
       "id": "deviceCoap2"
+    },
+    {
+      "name": {
+        "en": "Heater"
+      },
+      "class": "fan",
+      "capabilities": [
+        "latest_retrieval_date",
+        "product",
+        "onoff",
+        "timer",
+        "error",
+        "measure_temperature",
+        "light_intensity",
+        "beep",
+        "swing"
+      ],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "lan"
+      ],
+      "images": {
+        "small": "/drivers/deviceHeaterCoap/assets/images/small.png",
+        "large": "/drivers/deviceHeaterCoap/assets/images/large.png",
+        "xlarge": "/drivers/deviceHeaterCoap/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "pair"
+        }
+      ],
+      "settings": [
+        {
+          "type": "group",
+          "label": {
+            "en": "General settings"
+          },
+          "children": [
+            {
+              "id": "ipkey",
+              "type": "text",
+              "label": {
+                "en": "Philips Air device IP address"
+              },
+              "value": "",
+              "hint": {
+                "en": "Enter the IP address key of your Philips Air heater"
+              }
+            },
+            {
+              "id": "add_delay",
+              "type": "checkbox",
+              "value": false,
+              "label": {
+                "en": "Add 60 seconds delay"
+              }
+            }
+          ]
+        }
+      ],
+      "energy": {
+        "approximation": {
+          "usageOn": 500,
+          "usageOff": 1
+        }
+      },
+      "id": "deviceHeaterCoap"
     }
   ],
   "capabilities": {
+    "beep": {
+      "type": "boolean",
+      "title": {
+        "en": "Beep"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "toggle",
+      "uiQuickAction": true
+    },
     "button_lights": {
       "type": "enum",
       "title": {
@@ -1407,6 +1486,30 @@
           "id": "F",
           "title": {
             "en": "F, some devices"
+          }
+        }
+      ]
+    },
+    "swing": {
+      "type": "enum",
+      "title": {
+        "en": "Swing"
+      },
+      "getable": true,
+      "setable": true,
+      "uiComponent": "picker",
+      "uiQuickAction": true,
+      "values": [
+        {
+          "id": "17920",
+          "title": {
+            "en": "On"
+          }
+        },
+        {
+          "id": "0",
+          "title": {
+            "en": "Off"
           }
         }
       ]
