--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.52",
+  "version": "1.0.53",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -333,6 +333,23 @@
     "actions": [
       {
         "title": {
+          "en": "Beep"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=deviceHeaterCoap"
+          },
+          {
+            "name": "mode",
+            "type": "checkbox"
+          }
+        ],
+        "id": "beep"
+      },
+      {
+        "title": {
           "en": "Child lock"
         },
         "args": [
@@ -482,6 +499,86 @@
       },
       {
         "title": {
+          "en": "Heater mode"
+        },
+        "titleFormatted": {
+          "en": "Heater [[mode]]"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=deviceHeaterCoap"
+          },
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "AUTO",
+                "title": {
+                  "en": "Auto mode"
+                }
+              },
+              {
+                "id": "HIGH",
+                "title": {
+                  "en": "High"
+                }
+              },
+              {
+                "id": "LOW",
+                "title": {
+                  "en": "Low"
+                }
+              },
+              {
+                "id": "VENTILATION",
+                "title": {
+                  "en": "Ventilation"
+                }
+              }
+            ]
+          }
+        ],
+        "id": "heater_mode"
+      },
+      {
+        "title": {
+          "en": "Heater speed"
+        },
+        "titleFormatted": {
+          "en": "Heater speed [[mode]]"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=deviceHeaterCoap"
+          },
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "HIGH",
+                "title": {
+                  "en": "High"
+                }
+              },
+              {
+                "id": "LOW",
+                "title": {
+                  "en": "Low"
+                }
+              }
+            ]
+          }
+        ],
+        "id": "heater_speed"
+      },
+      {
+        "title": {
           "en": "Light level ring"
         },
         "titleFormatted": {
@@ -491,7 +588,7 @@
           {
             "name": "device",
             "type": "device",
-            "filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
+            "filter": "driver_id=device|device2|deviceCoap|deviceCoap2|deviceHeaterCoap"
           },
           {
             "name": "mode",
@@ -540,7 +637,7 @@
           {
             "name": "device",
             "type": "device",
-            "filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
+            "filter": "driver_id=device|device2|deviceCoap|deviceCoap2|deviceHeaterCoap"
           }
         ],
         "id": "off"
@@ -553,7 +650,7 @@
           {
             "name": "device",
             "type": "device",
-            "filter": "driver_id=device|device2|deviceCoap|deviceCoap2"
+            "filter": "driver_id=device|device2|deviceCoap|deviceCoap2|deviceHeaterCoap"
           }
         ],
         "id": "on"
@@ -633,6 +730,30 @@
           }
         ],
         "id": "purifier_mode"
+      },
+      {
+        "title": {
+          "en": "Target temperature"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=deviceHeaterCoap"
+          },
+          {
+            "type": "range",
+            "name": "value",
+            "title": {
+              "en": "celsius"
+            },
+            "min": 1,
+            "max": 37,
+            "step": 1,
+            "labelDecimals": 0
+          }
+        ],
+        "id": "target_temperature"
       }
     ]
   },
