--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.56",
+  "version": "1.0.57",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -213,6 +213,31 @@
           }
         ],
         "id": "measure_tvoc_changed"
+      },
+      {
+        "title": {
+          "en": "On/off changed"
+        },
+        "tokens": [
+          {
+            "name": "onoff",
+            "type": "boolean",
+            "title": {
+              "en": "device status"
+            },
+            "example": {
+              "en": "on"
+            }
+          }
+        ],
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=deviceHeaterCoap"
+          }
+        ],
+        "id": "onoff"
       },
       {
         "title": {
@@ -631,7 +656,7 @@
       },
       {
         "title": {
-          "en": "Shutoff purifier"
+          "en": "Shutoff device"
         },
         "args": [
           {
@@ -644,7 +669,7 @@
       },
       {
         "title": {
-          "en": "Startup purifier"
+          "en": "Startup device"
         },
         "args": [
           {
