--- a/app.json
+++ b/app.json
@@ -268,6 +268,43 @@
     "conditions": [
       {
         "title": {
+          "en": "Device active:"
+        },
+        "titleFormatted": {
+          "en": "Device active [[argument_main]]"
+        },
+        "hint": {
+          "en": "Device running"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=deviceHeaterCoap"
+          },
+          {
+            "name": "argument_main",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "running"
+                }
+              },
+              {
+                "id": "0",
+                "label": {
+                  "en": "off"
+                }
+              }
+            ]
+          }
+        ],
+        "id": "on_off"
+      },
+      {
+        "title": {
           "en": "Allergen level:"
         },
         "titleFormatted": {
