--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.57",
+  "version": "1.0.59",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -744,6 +744,12 @@
                 "id": "A",
                 "title": {
                   "en": "Allergen mode"
+                }
+              },
+              {
+                "id": "AS",
+                "title": {
+                  "en": "Allergy Sleep, some devices"
                 }
               },
               {
