--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.62",
+  "version": "1.0.63",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -527,6 +527,24 @@
                 "title": {
                   "en": "Sleep allergy"
                 }
+              },
+              {
+                "id": "17",
+                "title": {
+                  "en": "Sleep, some devices"
+                }
+              },
+              {
+                "id": "19",
+                "title": {
+                  "en": "Medium, some devices"
+                }
+              },
+              {
+                "id": "65",
+                "title": {
+                  "en": "High, some devices"
+                }
               }
             ]
           }
@@ -996,7 +1014,8 @@
         "measure_humidity",
         "measure_temperature",
         "light_ambient_mode",
-        "light_mode"
+        "light_mode",
+        "beep"
       ],
       "platforms": [
         "local"
@@ -1081,7 +1100,8 @@
         "timer",
         "error",
         "light_ambient_mode",
-        "light_mode"
+        "light_mode",
+        "beep"
       ],
       "platforms": [
         "local"
@@ -1448,6 +1468,24 @@
           "id": "10",
           "title": {
             "en": "Speed 9, some devices"
+          }
+        },
+        {
+          "id": "17",
+          "title": {
+            "en": "Sleep, some devices"
+          }
+        },
+        {
+          "id": "19",
+          "title": {
+            "en": "Medium, some devices"
+          }
+        },
+        {
+          "id": "65",
+          "title": {
+            "en": "High, some devices"
           }
         }
       ]
