--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.athom.philipsair",
-  "version": "1.0.63",
+  "version": "1.0.64",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "platforms": [
@@ -1618,7 +1618,7 @@
       ]
     },
     "light_intensity": {
-      "type": "number",
+      "type": "enum",
       "title": {
         "en": "Light level ring"
       },
